// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > renders with ariaLabel correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base" aria-label="Aria label"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with as correctly 1`] = `
"<section data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</section>"
`;

exports[`Textarea > renders with autoresize correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with avatar and leadingIcon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with avatar and trailingIcon correctly 1`] = `"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></span><span data-slot="trailing" class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="trailingIcon"></span></span></div>"`;

exports[`Textarea > renders with avatar correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></span>
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with class correctly 1`] = `
"<div data-slot="root" class="w-48"><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with default slot correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>Default slot
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with disabled correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base" disabled=""></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with icon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with id correctly 1`] = `
"<div data-slot="root" class=""><textarea id="id" rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with leading and icon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with leading slot correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class="">Leading slot</span>
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with leadingIcon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with loading and avatar correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with loading correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with loading trailing and avatar correctly 1`] = `"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></span><span data-slot="trailing" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="trailingIcon"></span></span></div>"`;

exports[`Textarea > renders with loading trailing correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if--><span data-slot="trailing" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="trailingIcon"></span></span>
</div>"
`;

exports[`Textarea > renders with loadingIcon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:loader" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with name correctly 1`] = `
"<div data-slot="root" class=""><textarea name="name" rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with neutral variant ghost correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with neutral variant none correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with neutral variant outline correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with neutral variant soft correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with neutral variant subtle correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with placeholder correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" placeholder="Search..." data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with pohon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with primary variant ghost correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with primary variant none correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with primary variant outline correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with primary variant soft correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with primary variant subtle correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with required correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base" required=""></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with rows correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="5" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with size lg correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with size md correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with size sm correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with size xl correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with size xs correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Textarea > renders with trailing and icon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if--><span data-slot="trailing" class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="trailingIcon"></span></span>
</div>"
`;

exports[`Textarea > renders with trailing slot correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if--><span data-slot="trailing" class="">Trailing slot</span>
</div>"
`;

exports[`Textarea > renders with trailingIcon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if--><span data-slot="trailing" class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="trailingIcon"></span></span>
</div>"
`;
